feat: change success color

--- a/theme/default/color.scss
+++ b/theme/default/color.scss
@@ -9,7 +9,7 @@
 
 $color-info: #99AEBB;
 $color-primary: #00A7DA;
-$color-success: #59E6A9;
+$color-success: #34bf49;
 $color-danger: #F2737C;
 $color-warning: #EF972C;
 
