feat: new color theme

--- a/theme/default/color.scss
+++ b/theme/default/color.scss
@@ -7,11 +7,11 @@
   @return $hsl-color;
 }
 
-$color-info: #99AEBB;
-$color-primary: #00A7DA;
-$color-success: #34bf49;
-$color-danger: #F2737C;
-$color-warning: #EF972C;
+$color-info: #A9A4B8;
+$color-primary: #4A588E;
+$color-success: #0ABD98;
+$color-danger: #B35567;
+$color-warning: #FD6A03;
 
 $base-color-names: primary, success, danger, warning, info;
 
