feat: add table column

--- a/theme/default/color.scss
+++ b/theme/default/color.scss
@@ -19,6 +19,7 @@ $base-color-names: primary, success, danger, warning, info;
 :root {
   color-scheme: light;
   --eb-bg-color: #ffffff;
+  --eb-bg-color-page: #f8f8f8;
   --eb-text-color: #333333;
   --eb-text-color-primary: #000000;
   --eb-text-color-secondery: #666666;
